--- a/Lab3/pom.xml
+++ b/Lab3/pom.xml
@@ -21,6 +21,14 @@
     		</plugin>
   		</plugins>
   	</build>
-  
+  	 
+  	<dependencies>
+  	 <dependency>
+  	   <groupId>JUnit</groupId>
+  	   <artifactId>JUnit</artifactId>
+  	   <version>4.11</version>
+  	   <scope>test</scope>
+  	</dependency>
+  </dependencies>
   
 </project>
